// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ContentStateIcon ui empty: Component: ContentStateIcon => empty 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state empty"
  >
    <div
      className="state-icons"
    >
      <Icon
        icon="add"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="photo"
      />
      <Icon
        icon="folder_open"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="add"
      />
    </div>
    <div
      className="state-content"
    >
      <Icon
        icon="laptop"
      />
    </div>
  </div>
  <h4>
    title
  </h4>
  <h6
    className="text-muted mb-3"
  >
    subtitle
  </h6>
</div>
`;

exports[`Component: ContentStateIcon ui error: Component: ContentStateIcon => error 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state error"
  >
    <div
      className="state-icons"
    >
      <Icon
        icon="add"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="photo"
      />
      <Icon
        icon="folder_open"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="add"
      />
    </div>
    <div
      className="state-content"
    >
      <Icon
        icon="sentiment_very_dissatisfied"
      />
    </div>
  </div>
  <h4>
    title
  </h4>
  <h6
    className="text-muted mb-3"
  >
    subtitle
  </h6>
</div>
`;

exports[`Component: ContentStateIcon ui loading: Component= ContentStateIcon => loading 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state loading"
  >
    <div
      className="state-icons"
    >
      <Icon
        icon="add"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="photo"
      />
      <Icon
        icon="folder_open"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="add"
      />
    </div>
    <div
      className="state-content"
    >
      <Spinner
        className="mb-2"
        color="#f0ad4e"
        size={75}
      />
    </div>
  </div>
  <h4>
    Loading...
  </h4>
</div>
`;

exports[`Component: ContentStateIcon ui no-results: Component: ContentStateIcon => no-results 1`] = `
<div
  className="text-center"
>
  <div
    className="content-state no-results"
  >
    <div
      className="state-icons"
    >
      <Icon
        icon="add"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="photo"
      />
      <Icon
        icon="folder_open"
      />
      <Icon
        icon="radio_button_unchecked"
      />
      <Icon
        icon="add"
      />
    </div>
    <div
      className="state-content"
    >
      <Icon
        icon="search"
      />
    </div>
  </div>
  <h4>
    title
  </h4>
  <h6
    className="text-muted mb-3"
  >
    subtitle
  </h6>
</div>
`;
